LITT Changelog:
===============
 * 2019-09-17: Optimize by Size instead of speed.
 * 2019-09-17: Simplify reset methods.
 * 2019-09-17: Factored out eIDARGI, renamed selTitle to selBook for needed naming consistency.
 * 2019-09-17: Added "add-l" action. Simplified executeSimpleAddAction and executeInsert.
 * 2019-09-17: Further simplified selectRowValues and dependent functions.
 * 2019-09-16: Added series virtual columns "sg" and "spg", renamed "sep" to "sp".
 * 2019-09-16: Renamed window function columns to be less collision-prone with normal columns.
 * 2019-09-16: Simplified selectRowValues.
 * 2019-09-15: Change input prompt for existing story.
 * 2019-09-15: Made addColumn(Info) methods more readable (shorter). defWidth => width. Clean stdafx.h. const & => const&. Simplified getColumns.
 * 2019-09-14: Alias toSecondsValue and toIdValue to toULongLong instead of calling it.
 * 2019-09-14: Factored out QueryBuilder base class from OutputQuery and used it for write queries.
 * 2019-09-14: Added confirmf, executeWriteSqlf and made executeInsert "f" to avoid overuse of fmt.
 * 2019-09-14: Uses S() macro to get c_str() value of std::string in format functions, easier to read.
 * 2019-09-13: Re-grouped the col descs in the online help a little.
 * 2019-09-13: Simplified "actual name" column handling.
 * 2019-09-13: Simplified sel* helper methods.
 * 2019-09-13: Listings during add actions are now resistant to output action options like -c and -o.
 * 2019-09-13: Moved inputIsbn to Input functions and ISBN check functions to Utils.
 * 2019-09-13: Avoid duplicating the input regex check.
 * 2019-09-12: Cleaned up input functions.
 * 2019-09-12: Cleaned up toSecondsValue.
 * 2019-09-12: Bug fix: The ISBN check now verifies that it only contains numeric digits.
 * 2019-09-12: Bug fix: Getting the next ID value now works for an empty db!
 * 2019-09-12: Cleaned up string encoding conversion functions.